# quarto_tools_project

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: conf.py  index.md
docs/_build/doctrees/: api.doctree  environment.pickle  index.doctree
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/quarto_tools/: bibtex.html  blocks.html  cli.html  consolidate.html  pytest_qmd.html  tidy.html  toc.html  utils.html  xref.html
docs/_build/html/_sources/: api.md.txt
src/quarto_tools/: __init__.py  bibtex.py  blocks.py  blog.py  cli.py  consolidate.py  pytest_qmd.py  tidy.py  toc.py  utils.py  xref.py  xref_original.py
tests/: bibtex-test.bat  cmm-test.bat  glob-test.bat  make-test-environment.bat  pmir-test.bat  resolve_test.py  single-file.bat  test-script.qt  xref-test.bat
toc/: README.tex  make-toc.bat
